qt6/gen_qlineedit.h

class QLineEdit;
class QMetaObject;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QLineEdit QLineEdit;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QLineEdit_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
bool QLineEdit_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QLineEdit_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_keyReleaseEvent(void* self, QKeyEvent* param1);
bool QLineEdit_override_virtual_focusInEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_focusInEvent(void* self, QFocusEvent* param1);
bool QLineEdit_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_focusOutEvent(void* self, QFocusEvent* param1);
bool QLineEdit_override_virtual_paintEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_paintEvent(void* self, QPaintEvent* param1);
bool QLineEdit_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* param1);
bool QLineEdit_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* e);
bool QLineEdit_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* e);
bool QLineEdit_override_virtual_dropEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_dropEvent(void* self, QDropEvent* param1);
bool QLineEdit_override_virtual_changeEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_changeEvent(void* self, QEvent* param1);
bool QLineEdit_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QLineEdit_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QLineEdit_override_virtual_initStyleOption(void* self, intptr_t slot);
void QLineEdit_virtualbase_initStyleOption(const void* self, QStyleOptionFrame* option);
bool QLineEdit_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QLineEdit_virtualbase_inputMethodQuery(const void* self, int param1);
bool QLineEdit_override_virtual_timerEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_timerEvent(void* self, QTimerEvent* param1);
bool QLineEdit_override_virtual_event(void* self, intptr_t slot);
bool QLineEdit_virtualbase_event(void* self, QEvent* param1);
bool QLineEdit_override_virtual_devType(void* self, intptr_t slot);
int QLineEdit_virtualbase_devType(const void* self);
bool QLineEdit_override_virtual_setVisible(void* self, intptr_t slot);
void QLineEdit_virtualbase_setVisible(void* self, bool visible);
bool QLineEdit_override_virtual_heightForWidth(void* self, intptr_t slot);
int QLineEdit_virtualbase_heightForWidth(const void* self, int param1);
bool QLineEdit_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QLineEdit_virtualbase_hasHeightForWidth(const void* self);
bool QLineEdit_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QLineEdit_virtualbase_paintEngine(const void* self);
bool QLineEdit_override_virtual_wheelEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QLineEdit_override_virtual_enterEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QLineEdit_override_virtual_leaveEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_leaveEvent(void* self, QEvent* event);
bool QLineEdit_override_virtual_moveEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QLineEdit_override_virtual_resizeEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QLineEdit_override_virtual_closeEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QLineEdit_override_virtual_tabletEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QLineEdit_override_virtual_actionEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QLineEdit_override_virtual_showEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_showEvent(void* self, QShowEvent* event);
bool QLineEdit_override_virtual_hideEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QLineEdit_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QLineEdit_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QLineEdit_override_virtual_metric(void* self, intptr_t slot);
int QLineEdit_virtualbase_metric(const void* self, int param1);
bool QLineEdit_override_virtual_initPainter(void* self, intptr_t slot);
void QLineEdit_virtualbase_initPainter(const void* self, QPainter* painter);
bool QLineEdit_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QLineEdit_virtualbase_redirected(const void* self, QPoint* offset);
bool QLineEdit_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QLineEdit_virtualbase_sharedPainter(const void* self);
bool QLineEdit_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QLineEdit_virtualbase_focusNextPrevChild(void* self, bool next);
bool QLineEdit_override_virtual_eventFilter(void* self, intptr_t slot);
bool QLineEdit_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QLineEdit_override_virtual_childEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_childEvent(void* self, QChildEvent* event);
bool QLineEdit_override_virtual_customEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_customEvent(void* self, QEvent* event);
bool QLineEdit_override_virtual_connectNotify(void* self, intptr_t slot);
void QLineEdit_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QLineEdit_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QLineEdit_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QLineEdit_staticMetaObject();
void QLineEdit_delete(QLineEdit* self);