qt6/gen_qlineedit.nim

proc fcQLineEdit_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_mouseDoubleClickEvent".}
proc fQLineEdit_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_keyPressEvent".}
proc fcQLineEdit_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_keyPressEvent".}
proc fQLineEdit_virtualbase_keyReleaseEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_keyReleaseEvent".}
proc fcQLineEdit_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_keyReleaseEvent".}
proc fQLineEdit_virtualbase_focusInEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_focusInEvent".}
proc fcQLineEdit_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_focusInEvent".}
proc fQLineEdit_virtualbase_focusOutEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_focusOutEvent".}
proc fcQLineEdit_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_focusOutEvent".}
proc fQLineEdit_virtualbase_paintEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_paintEvent".}
proc fcQLineEdit_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_paintEvent".}
proc fQLineEdit_virtualbase_dragEnterEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_dragEnterEvent".}
proc fcQLineEdit_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_dragEnterEvent".}
proc fQLineEdit_virtualbase_dragMoveEvent(self: pointer, e: pointer): void{.importc: "QLineEdit_virtualbase_dragMoveEvent".}
proc fcQLineEdit_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_dragMoveEvent".}
proc fQLineEdit_virtualbase_dragLeaveEvent(self: pointer, e: pointer): void{.importc: "QLineEdit_virtualbase_dragLeaveEvent".}
proc fcQLineEdit_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_dragLeaveEvent".}
proc fQLineEdit_virtualbase_dropEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_dropEvent".}
proc fcQLineEdit_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_dropEvent".}
proc fQLineEdit_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_changeEvent".}
proc fcQLineEdit_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_changeEvent".}
proc fQLineEdit_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_contextMenuEvent".}
proc fcQLineEdit_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_contextMenuEvent".}
proc fQLineEdit_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_inputMethodEvent".}
proc fcQLineEdit_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_inputMethodEvent".}
proc fQLineEdit_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QLineEdit_virtualbase_initStyleOption".}
proc fcQLineEdit_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_initStyleOption".}
proc fQLineEdit_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QLineEdit_virtualbase_inputMethodQuery".}
proc fcQLineEdit_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_inputMethodQuery".}
proc fQLineEdit_virtualbase_timerEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_timerEvent".}
proc fcQLineEdit_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_timerEvent".}
proc fQLineEdit_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QLineEdit_virtualbase_event".}
proc fcQLineEdit_override_virtual_event(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_event".}
proc fQLineEdit_virtualbase_devType(self: pointer, ): cint{.importc: "QLineEdit_virtualbase_devType".}
proc fcQLineEdit_override_virtual_devType(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_devType".}
proc fQLineEdit_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QLineEdit_virtualbase_setVisible".}
proc fcQLineEdit_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_setVisible".}
proc fQLineEdit_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QLineEdit_virtualbase_heightForWidth".}
proc fcQLineEdit_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_heightForWidth".}
proc fQLineEdit_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QLineEdit_virtualbase_hasHeightForWidth".}
proc fcQLineEdit_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_hasHeightForWidth".}
proc fQLineEdit_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QLineEdit_virtualbase_paintEngine".}
proc fcQLineEdit_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_paintEngine".}
proc fQLineEdit_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_wheelEvent".}
proc fcQLineEdit_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_wheelEvent".}
proc fQLineEdit_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_enterEvent".}
proc fcQLineEdit_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_enterEvent".}
proc fQLineEdit_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_leaveEvent".}
proc fcQLineEdit_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_leaveEvent".}
proc fQLineEdit_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_moveEvent".}
proc fcQLineEdit_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_moveEvent".}
proc fQLineEdit_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_resizeEvent".}
proc fcQLineEdit_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_resizeEvent".}
proc fQLineEdit_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_closeEvent".}
proc fcQLineEdit_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_closeEvent".}
proc fQLineEdit_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_tabletEvent".}
proc fcQLineEdit_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_tabletEvent".}
proc fQLineEdit_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_actionEvent".}
proc fcQLineEdit_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_actionEvent".}
proc fQLineEdit_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_showEvent".}
proc fcQLineEdit_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_showEvent".}
proc fQLineEdit_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_hideEvent".}
proc fcQLineEdit_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_hideEvent".}
proc fQLineEdit_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QLineEdit_virtualbase_nativeEvent".}
proc fcQLineEdit_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_nativeEvent".}
proc fQLineEdit_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QLineEdit_virtualbase_metric".}
proc fcQLineEdit_override_virtual_metric(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_metric".}
proc fQLineEdit_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QLineEdit_virtualbase_initPainter".}
proc fcQLineEdit_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_initPainter".}
proc fQLineEdit_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QLineEdit_virtualbase_redirected".}
proc fcQLineEdit_override_virtual_redirected(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_redirected".}
proc fQLineEdit_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QLineEdit_virtualbase_sharedPainter".}
proc fcQLineEdit_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_sharedPainter".}
proc fQLineEdit_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QLineEdit_virtualbase_focusNextPrevChild".}
proc fcQLineEdit_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_focusNextPrevChild".}
proc fQLineEdit_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QLineEdit_virtualbase_eventFilter".}
proc fcQLineEdit_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_eventFilter".}
proc fQLineEdit_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_childEvent".}
proc fcQLineEdit_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_childEvent".}
proc fQLineEdit_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QLineEdit_virtualbase_customEvent".}
proc fcQLineEdit_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_customEvent".}
proc fQLineEdit_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QLineEdit_virtualbase_connectNotify".}
proc fcQLineEdit_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_connectNotify".}
proc fQLineEdit_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QLineEdit_virtualbase_disconnectNotify".}
proc fcQLineEdit_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_disconnectNotify".}
proc fcQLineEdit_staticMetaObject(): pointer {.importc: "QLineEdit_staticMetaObject".}
proc fcQLineEdit_delete(self: pointer) {.importc: "QLineEdit_delete".}


func init*(T: type QLineEdit, h: ptr cQLineEdit): QLineEdit =
  T(h: h)
proc create*(T: type QLineEdit, parent: gen_qwidget.QWidget): QLineEdit =

  QLineEdit.init(fcQLineEdit_new(parent.h))
proc create*(T: type QLineEdit, ): QLineEdit =

  QLineEdit.init(fcQLineEdit_new2())
proc create*(T: type QLineEdit, param1: string): QLineEdit =

  QLineEdit.init(fcQLineEdit_new3(struct_miqt_string(data: param1, len: csize_t(len(param1)))))
proc create*(T: type QLineEdit, param1: string, parent: gen_qwidget.QWidget): QLineEdit =

  QLineEdit.init(fcQLineEdit_new4(struct_miqt_string(data: param1, len: csize_t(len(param1))), parent.h))
proc metaObject*(self: QLineEdit, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQLineEdit_metaObject(self.h))

proc metacast*(self: QLineEdit, param1: cstring): pointer =

  fcQLineEdit_metacast(self.h, param1)

proc metacall*(self: QLineEdit, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =
